Fri Feb 13 19:57:01 2004  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/test_trackback.rb: added tests for TrackBack with RSS
	  2.0.

	* test/rss/common.rb: added methods make RSS 2.0.

	* lib/rss/trackback.rb: TrackBack API is decided.

	* lib/rss/rss.rb: RSS::VERSION 0.0.7 -> 0.0.8.

	* lib/rss/parser.rb, lib/rss/rss.rb: replaced $DEBUG by RSS::DEBUG.

	* lib/rss/2.0.rb: removed RSS 2.0 URI. Because RSS 2.0 doesn't
	  have URI.

Fri Feb 13 14:41:00 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: en-bugged at last commit (Feb 11 23:24:22 2004)

Fri Feb 13 12:26:37 2004  Minero Aoki  <aamine@loveruby.net>

	* test/fileutils/test_fileutils.rb: rescue SystemCallError instead
	  of EINVAL.  File.link may raise EACCES on network file systems.

Fri Feb 13 05:18:58 2004  Minero Aoki  <aamine@loveruby.net>

	* test/fileutils/test_fileutils.rb: File.link raises EINVAL on
	  Win9x. [ruby-dev:22713]

Thu Feb 12 21:49:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/ftools.rb: documented

Thu Feb 12 21:19:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/base64.rb: added and tidied documentation

Thu Feb 12 20:45:01 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/protocol.rb (WriteAdapater#puts): must append "\n" to
	  the string, don't prepend. (ruby-bugs:PR#1280)

Thu Feb 12 20:31:43 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_tmpsrc): cpp32 of Borland C++ ignores #error
	  directives in DOS line-ending files at all.

Thu Feb 12 15:23:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rparen): ignore preceding newlines to right parentheses.
	  (ruby-bugs:PR#1221) [ruby-dev:22858]

Thu Feb 12 14:17:43 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: set ac_cv_func_link to yes to enable link() on MinGW.
	  [ruby-dev:22241]

Thu Feb 12 13:32:49 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (link): raise NotImplementedError on Win9X.